--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     </head>
     <body ng-controller="mainCtrl">
+        <input type="text" ng-model="nufriend" />
+        <button ng-click="addFriend()">add friend</button>
         <h1>My Friends</h1>
             <div ng-repeat="friend in friends">
                 <p> {{friend}} </p>
